--- a/AdminWPF/MainWindow.xaml
+++ b/AdminWPF/MainWindow.xaml
@@ -1,20 +1,20 @@
-﻿<Window x:Class="WPF.MainWindow"
+﻿<Window x:Class="AdminWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF"
+        xmlns:local="clr-namespace:AdminWPF"
         mc:Ignorable="d"
-        Title="Fridge Inventory Management" Height="200" Width="300">
+            Title="Admin Panel" Height="200" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <!--<Menu>
-            <MenuItem Header="Shopping List" Click="MenuItem_OnClick"/>
-            <MenuItem Header="Settings" Click="Settings_OnClick"/>
-        </Menu>-->
+        <MenuItem Header="Shopping List" Click="MenuItem_OnClick"/>
+        <MenuItem Header="Settings" Click="Settings_OnClick"/>
+    </Menu>-->
 
         <Grid Grid.Row="1" Margin="5">
             <Grid.RowDefinitions>
@@ -38,7 +38,6 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Column="0" Content="Register" MaxWidth="100" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Click="Register_OnClick"/>
                 <Button Grid.Column="1" Content="Login" MaxWidth="100" HorizontalAlignment="Left" VerticalAlignment="Top" Height="Auto" Margin="15, 10" IsDefault="True" Click="Login_OnClick"/>
             </Grid>
         </Grid>
