--- a/WPF/InputPasswordWindow.xaml
+++ b/WPF/InputPasswordWindow.xaml
@@ -1,22 +1,22 @@
-﻿<Window x:Class="WPF.AddFridgeWindow"
+﻿<Window x:Class="WPF.InputPasswordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF"
         mc:Ignorable="d"
-        Title="Add Fridge" Height="100" Width="300">
+        Title="Input Password" Height="150" Width="300">
     <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="Name of the fridge: " HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="0" Grid.Column="1" x:Name="NameTextBox"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="Create" Margin="5" IsDefault="True" Click="Add_OnClick"/>
+        <TextBlock Grid.Row="0" Text="Enter password: " Margin="5"/>
+        <PasswordBox Grid.Row="0" Grid.Column="1" x:Name="PasswordBox" Margin="5" MinWidth="100"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="OK" Margin="5" IsDefault="True" Click="Button_Click"/>
     </Grid>
 </Window>
